Migrate to Class-File API (JEP 457)